--- a/cicd/pipeline/myapp-ci-pipeline.yaml
+++ b/cicd/pipeline/myapp-ci-pipeline.yaml
@@ -386,6 +386,21 @@ spec:
       taskRef:
         kind: ClusterTask
         name: tkn
+    - name: mail-notify
+      # displayName: "Notification from $(context.pipeline.name)"
+      params:
+        - name: recipients
+          value: ptanvann@redhat.com
+        - name: message
+          values: "test"
+          #value: $(tasks.update-manifest-task.results.image_tag) "|" $(tasks.update-manifest-task.results.environment) "| update-manifest-task :" $(tasks.update-manifest-task.status) "| argocd-task-sync :" $(tasks.argocd-task-sync-and-wait.status)
+        - name: pipeline_name
+          value: $(context.pipeline.name) 
+        - name: pipelinerun_name
+          value: $(context.pipelineRun.name)             
+      taskRef:
+        kind: Task
+        name: sendmail-ci
   workspaces:
     - name: source
     - name: secret
