update mail. when

--- a/cicd/pipeline/myapp-ci-pipeline.yaml
+++ b/cicd/pipeline/myapp-ci-pipeline.yaml
@@ -441,6 +441,11 @@ spec:
         name: tkn
     - name: mail-notify
       # displayName: "Notification from $(context.pipeline.name)"
+      when:
+        - input: $(params.ext_branch)
+          operator: notin
+          values:
+            - "refs-heads-main"
       params:
         - name: recipients
           value: ptanvann@redhat.com
