--- a/cicd/pipeline/myapp-ci-pipeline.yaml
+++ b/cicd/pipeline/myapp-ci-pipeline.yaml
@@ -325,83 +325,6 @@ spec:
           values:
             - "dev"
             - "tags"
-
-# Update Dev
-    # - name: update-manifest-dev
-      # params:
-        # - name: git_repo_name
-          # value: $(params.git_repo_name)
-        # - name: environment
-          # value: $(tasks.initial-info.results.environment)
-        # - name: image_tag
-          # value: $(tasks.initial-info.results.image_tag)
-        # - name: image_repo_url
-          # value: image-registry.openshift-image-registry.svc:5000/cicd
-      # runAfter:
-        # - buildimage
-      # taskRef:
-        # kind: Task
-        # name: update-manifest-task
-      # when:
-        # - input: $(tasks.initial-info.results.environment)
-          # operator: in
-          # values:
-            # - "dev"
-# ArgoCD SyncApp
-    # - name: argocd-task-sync-and-wait-dev
-      # params:
-        # - name: application-name #ArgoCD Application Prefix name
-          # value: myapp
-        # - name: environment
-          # value: $(tasks.initial-info.results.environment)
-      # taskRef:
-        # kind: Task
-        # name: argocd-task-sync-and-wait
-      # runAfter:
-        # - update-manifest-dev
-      # when:
-        # - input: $(tasks.initial-info.results.environment)
-          # operator: in
-          # values:
-            # - "dev"
-# Update SIT
-    # - name: update-manifest-sit
-    #   params:
-    #     - name: git_repo_name
-    #       value: $(params.git_repo_name)
-    #     - name: environment
-    #       value: $(tasks.initial-info.results.environment)
-    #     - name: image_tag
-    #       value: $(tasks.initial-info.results.image_tag)
-    #     - name: image_repo_url
-    #       value: image-registry.openshift-image-registry.svc:5000/cicd
-    #   runAfter:
-    #     - buildimage
-    #   taskRef:
-    #     kind: Task
-    #     name: update-manifest-task
-    #   when:
-    #     - input: $(tasks.initial-info.results.environment)
-    #       operator: in
-    #       values:
-    #         - "tags"
-# ArgoCD SyncApp
-    # - name: argocd-task-sync-and-wait-sit
-    #   params:
-    #     - name: application-name #ArgoCD Application Prefix name
-    #       value: myapp
-    #     - name: environment
-    #       value: $(tasks.initial-info.results.environment)
-    #   taskRef:
-    #     kind: Task
-    #     name: argocd-task-sync-and-wait
-    #   runAfter:
-    #     - update-manifest-sit
-    #   when:
-    #     - input: $(tasks.initial-info.results.environment)
-    #       operator: in
-    #       values:
-    #         - "tags"
   finally:
     - name: clean-taskrun
       when:
@@ -468,7 +391,7 @@ spec:
         - name: recipients
           value: ptanvann@redhat.com
         - name: message
-          value: $(params.ext_branch) "| Other "  "| Unit Test task :" $(tasks.unitest.status) "| Compile MVN task :" $(tasks.compile-mvn.status) "| SonarQube Scanner task :" $(tasks.sonarqube-scanner.status) "| Build Image task :" $(tasks.buildimage.status)   "| update-manifest-task :" $(tasks.update-manifest-task.status) "| argocd-task-sync :" $(tasks.argocd-task-sync-and-wait.status)
+          value: $(tasks.initial-info.results.image_tag) " - commitid | Other "  "| Unit Test task :" $(tasks.unitest.status) "| Compile MVN task :" $(tasks.compile-mvn.status) "| SonarQube Scanner task :" $(tasks.sonarqube-scanner.status) "| Build Image task :" $(tasks.buildimage.status)   "| update-manifest-task :" $(tasks.update-manifest-task.status) "| argocd-task-sync :" $(tasks.argocd-task-sync-and-wait.status)
         - name: pipeline_name
           value: $(context.pipeline.name) 
         - name: pipelinerun_name
