update sit input

--- a/cicd/pipeline/myapp-ci-pipeline.yaml
+++ b/cicd/pipeline/myapp-ci-pipeline.yaml
@@ -388,6 +388,7 @@ spec:
             - "unknown"
             - "dev"
             - "tags"
+            - "sit"
       params:
         - name: recipients
           value: ptanvann@redhat.com
