--- a/cicd/pipeline/myapp-ci-pipeline.yaml
+++ b/cicd/pipeline/myapp-ci-pipeline.yaml
@@ -4,17 +4,17 @@ metadata:
   name: myapp-ci-pipeline
 spec:
   params:
-    - default: 'https://github.com/paichayon321/spring-web-quickstart.git'
+    - name: git_repo_url
+      default: 'https://github.com/paichayon321/spring-web-quickstart.git'
       description: The git repository url
-      name: git_repo_url
       type: string
-    - default: main
+    - name: git_revision
+      default: main
       description: The git revision
-      name: git_revision
       type: string
-    - default: spring-web-quickstart
+    - name: git_repo_name
+      default: spring-web-quickstart
       description: The name of the deployment to be created / patched
-      name: git_repo_name
       type: string
     - name: ext_branch
       type: string
@@ -23,20 +23,11 @@ spec:
       type: string
       default: default
 # Param for update manifest
-    # - name: git_repo_name
-    #   default: spring-web-quickstart
-    #   description: The name of the deployment to be created
-    # - name: environment
-    #   type: string
-    #   default: defaut
-    #   description: Deploy environment name "uat" or "prod"
-    # - name: image_tag
-    #   description: image version number in format x.y.z for example 1.0.0
     # - name: image_repo_url
     #   default: image-registry.openshift-image-registry.svc:5000/cicd
     #   description: Image registry repository where image existing
   tasks:
-# Clone 
+# Clone Applicaion source code
     - name: git-clone
       params:
         - name: url
@@ -286,6 +277,7 @@ spec:
           workspace: source
         - name: dockerconfig
           workspace: source
+# Update manifest 
     - name: update-manifest-task
       params:
         - name: git_repo_name
