--- a/cicd/pipeline/myapp-ci-pipeline.yaml
+++ b/cicd/pipeline/myapp-ci-pipeline.yaml
@@ -5,15 +5,18 @@ metadata:
 spec:
   params:
     - name: git_repo_url
-      default: 'https://github.com/paichayon321/spring-web-quickstart.git'
+      # default: 'https://github.com/paichayon321/spring-web-quickstart.git'
+      default: default
       description: The git repository url
       type: string
     - name: git_revision
-      default: main
+      # default: main
+      default: default
       description: The git revision
       type: string
     - name: git_repo_name
-      default: spring-web-quickstart
+      # default: spring-web-quickstart
+      default: default
       description: The name of the deployment to be created / patched
       type: string
     - name: ext_branch
