--- a/cicd/pipeline/myapp-ci-pipeline.yaml
+++ b/cicd/pipeline/myapp-ci-pipeline.yaml
@@ -5,30 +5,20 @@ metadata:
 spec:
   params:
     - name: git_repo_url
-      # default: 'https://github.com/paichayon321/spring-web-quickstart.git'
-      default: default
+      default: default. # 'https://github.com/paichayon321/spring-web-quickstart.git'
       description: The git repository url
       type: string
     - name: git_repo_name
-      # default: spring-web-quickstart
       default: default
       description: The name of the deployment to be created / patched
       type: string
     - name: git_revision
-      # default: main
       default: default
       description: The git revision
       type: string
     - name: ext_branch
       type: string
       default: default
-    # - name: environment
-    #   type: string
-    #   default: default
-# Param for update manifest
-    # - name: image_repo_url
-    #   default: image-registry.openshift-image-registry.svc:5000/cicd
-    #   description: Image registry repository where image existing
   tasks:
 # Clone Applicaion source code
     - name: git-clone
@@ -85,16 +75,10 @@ spec:
           values:
             - "refs-heads-main"
       params:
-        # - name: git_repo_url
-        #   value: $(params.git_repo_url)
-        # - name: git_repo_name
-        #   value: $(params.git_repo_name)
         - name: git_revision
           value: $(params.git_revision)
         - name: ext_branch
           value: $(params.ext_branch)
-        # - name: environment
-        #   value: $(params.environment)  
       runAfter:
         - git-clone
       taskRef:
