--- a/cicd/pipeline/myapp-ci-pipeline.yaml
+++ b/cicd/pipeline/myapp-ci-pipeline.yaml
@@ -139,8 +139,8 @@ spec:
           values:
             - "refs-heads-main"
       params:
-        - name: SONAR_HOST_URL
-          value: 'http://sonarqube-route-devopstools.apps.524vf.dynamic.opentlc.com/'
+        # - name: SONAR_HOST_URL
+        #   value: 'http://sonarqube-route-devopstools.apps.524vf.dynamic.opentlc.com/'
         - name: SONAR_PROJECT_KEY
           value: $(params.git_repo_name)-$(params.ext_branch)
         - name: PROJECT_VERSION
