remove unuse secret work

--- a/cicd/pipeline/myapp-triggertemplate.yaml
+++ b/cicd/pipeline/myapp-triggertemplate.yaml
@@ -47,7 +47,7 @@ spec:
               requests:
                 storage: 1Gi
             volumeMode: Filesystem
-      - name: secret
-        secret:
-          secretName: github-pat-secret
+      # - name: secret
+      #   secret:
+      #     secretName: github-pat-secret
         
