--- a/cicd/pipeline/test-approve-task.yaml
+++ b/cicd/pipeline/test-approve-task.yaml
@@ -16,8 +16,10 @@ spec:
       while [ "$approval" != true ]; do
           # Your main script logic goes here
           echo "Waiting for approval..."
-          exit 0
+          sleep 2
+
       done
       
       echo "Approvel and Exit 0"
+      exit 0
       
